--- a/public/index.html
+++ b/public/index.html
@@ -49,19 +49,17 @@
 
 <p class="text-center text-8xl font-bold p-16 text-secondary ">PROJECTS</p>
 
-  <div>
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
 
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
+        <div class="absolute flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300 inset-0">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Product Designer</p>
-            <p class="text-black text-lg">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
-              and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
-              collaborating with Analysts and Programmers for successful project completion.</p>
+            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
+            <p class="text-black text-lg">Utilized Figma to design a visually appealing and user-friendly interface for 
+              Exam Project.</p>
             </div>
           </div>
-        <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="healin">
+        <img class="w-full rounded-lg hover:brightness-50" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="healin">
       </div>
 
     <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
@@ -83,9 +81,8 @@
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
-            <p class="text-black text-lg">Utilized Figma to design a visually appealing and user-friendly interface for 
-              Exam Project.</p>
+            <p class="text-secondary text-4xl font-bold"></p>
+            <p class="text-black text-lg"></p>
               <button class="bg-secondary px-10 py-4 rounded-md">
                 Go to Page
               </button>
@@ -97,9 +94,10 @@
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
-            <p class="text-black text-lg">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
-              about TailwindCSS.</p>
+            <p class="text-secondary text-4xl font-bold">Product Designer</p>
+            <p class="text-black text-lg">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
+              and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
+              collaborating with Analysts and Programmers for successful project completion.</p>
               <button class="bg-secondary px-10 py-4 rounded-md">
                 Go to Page
               </button>
@@ -115,9 +113,9 @@
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
-            <p class="text-black text-lg">Utilized Figma to design a visually appealing and user-friendly interface for 
-              Exam Project.</p>
+            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
+            <p class="text-black text-lg">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
+              about TailwindCSS.</p>
               <button class="bg-secondary px-10 py-4 rounded-md">
                 Go to Page
               </button>
@@ -129,9 +127,8 @@
       <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
           <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
-            <p class="text-black text-lg">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
-              about TailwindCSS.</p>
+            <p class="text-secondary text-4xl font-bold">Advice Generator Web</p>
+            <p class="text-black text-lg"></p>
               <button class="bg-secondary px-10 py-4 rounded-md">
                 Go to Page
               </button>
@@ -141,9 +138,16 @@
       </div>
 
     </div>
-
-    </div>
   </div>
+
+<p class="text-center text-8xl font-bold p-16 text-secondary pt-[200px]">CONTACT</p>
+
+<div class="flex flex-row">
+  <div>GitHub</div>
+  <div>Behance</div>
+  <div>Discord</div>
+  <div>Instagram</div>
+</div>
 
 </body>
 </html>
