--- a/public/index.html
+++ b/public/index.html
@@ -1,153 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="output.css">
-    <title>My Web</title>
-</head>
-<body class="bg-primary">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+			rel="stylesheet" />
+		<link rel="stylesheet" href="output.css" />
+		<title>My Web</title>
+	</head>
+	<body class="bg-primary">
+		<nav>
+			<div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+				<div class="flex items-center justify-between h-16">
+					<div>
+						<a href="#" class="text-white font-bold text-xl">Lynn.</a>
+					</div>
+					<div class="hidden md:block">
+						<div class="flex items-center justify-center space-x-4">
+							<a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">About</a>
+							<a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Projects</a>
+							<a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Contact</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</nav>
 
-  <nav>
-    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between h-16">
-        <div>
-          <a href="#" class="text-white font-bold text-xl">Lynn.</a>
-        </div>
-        <div class="hidden md:block">
-          <div class="flex items-center justify-center space-x-4">
-            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">About</a>
-            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Projects</a>
-            <a href="#" class="text-white hover:bg-[#1B1B2F] px-8 py-2 rounded-lg">Contact</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </nav>
+		<div class="flex py-10">
+			<div class="text-white w-1/2 pl-[150px] pt-[170px]">
+				<div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div>
+				<br />
+				<div class="text-3xl">A Front-End Web and Design Enthusiast.</div>
+				<p class="py-[65px]">
+					A second-year Informatics major student seeking opportunities in Front-End Web Development
+					and Product Design. With a passion for technology and a curiosity for exploring new
+					possibilities, I thrive on experimenting with the latest tech and programming languages.
+					Balancing teamwork with individual initiative, I'm committed to making valuable
+					contributions to innovative projects.
+				</p>
+				<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">Download CV</button>
+			</div>
+			<img
+				class="w-1/2"
+				src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png"
+				alt="profile" />
+		</div>
 
-  <div class="flex py-10">
-    <div class="text-white w-1/2 pl-[150px] pt-[170px]">
-      <div class="text-5xl">Hello, I'm <b>Lintang Arsa Naura</b></div><br>
-      <div class="text-3xl">A Front-End Web and Design Enthusiast.</div> 
-        <p class="py-[65px]">
-          A second-year Informatics major student seeking opportunities in Front-End Web Development and Product Design. 
-          With a passion for technology and a curiosity for exploring new possibilities, I thrive on experimenting with the 
-          latest tech and programming languages.Balancing teamwork with individual initiative, I'm committed to making valuable 
-          contributions to innovative projects.
-        </p>
-        <button class="bg-secondary px-10 py-4 rounded-md">
-          Download CV
-        </button>
-    </div>
-      <img class="w-1/2" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/profileimg.png" alt="profile">
-  </div>
+		<p class="text-center text-8xl font-bold p-16 text-secondary">PROJECTS</p>
 
+		<div class="items-center justify-center flex flex-wrap m-4 gap-4">
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png"
+						alt="healin" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">Heal'in UI</p>
+						<p class="text-lg text-center text-white p-8">
+							Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.
+						</p>
+					</div>
+				</div>
+			</div>
 
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true"
+						alt="amegif" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">Freelance as 2D Rigging Artist</p>
+						<p class="text-lg text-center text-white p-8">
+							Work as a 2D Animator with more than 10 successful gigs. Collaborated closely with clients
+							to understand their requirements and delivering high-quality rigging on time and within
+							budget.
+						</p>
+						<div class="flex justify-center items-center">
+							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+                <a href="https://www.fiverr.com/ameamesha?up_rollout=true" target="_blank" class="text-white">Go to Page</a>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<div class="items-center justify-center flex flex-wrap m-4 gap-4">
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png"
+						alt="orangecenter" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">UI/UX Designer</p>
+						<p class="text-lg text-center text-white p-8">Project Orange Center</p>
+						<div class="flex justify-center items-center">
+							<!-- <button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+                <a href="" target="_blank" class="text-white">Go to Page</a>
+              </button> -->
+						</div>
+					</div>
+				</div>
+			</div>
 
-<p class="text-center text-8xl font-bold p-16 text-secondary ">PROJECTS</p>
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/Diagrams.png"
+						alt="diagrams" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">Product Designer</p>
+						<p class="text-lg text-center text-white p-8">
+							Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models,
+							and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum,
+							collaborating with Analysts and Programmers for successful project completion.
+						</p>
+						<!-- <div class="flex justify-center items-center">
+							<a href="" target="_blank" class="text-white">Go to Page</a>
+						</div> -->
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="items-center justify-center flex flex-wrap m-4 gap-4">
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png"
+						alt="w3school" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">W3School Web Duplication</p>
+						<p class="text-lg text-center text-white p-8">
+							College Project to Duplicate a Famous Website's Front-End. My first project where I first
+							learned about TailwindCSS.
+						</p>
+						<div class="flex justify-center items-center">
+							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+                <a href="https://lynnarsa.github.io/W3School-Clone/" target="_blank" class="text-white">Go to Page</a>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+				<div class="relative rounded-lg overflow-hidden group">
+					<img
+						class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+						src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/advicegenerator.png"
+						alt="advice" />
+					<div
+						class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+						<p class="text-secondary text-4xl font-bold text-center">Advice Generator Web</p>
+						<p class="text-lg text-center text-white p-8">
+							College Project to Duplicate a Famous Website's Front-End. My first project where I first
+							learned about TailwindCSS.
+						</p>
+						<div class="flex justify-center items-center">
+							<button class="bg-secondary px-10 py-4 rounded-md hover:bg-hover-red duration-300">
+                <a href="https://lynnarsa.github.io/Advice-Generator-App/" target="_blank" class="text-white">Go to Page</a>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
     <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-
-      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300 inset-0">
-          <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Heal'in UI</p>
-            <p class="text-black text-lg">Utilized Figma to design a visually appealing and user-friendly interface for 
-              Exam Project.</p>
+      <div class="items-center justify-center flex flex-wrap m-4 gap-4">
+        <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
+          <div class="relative rounded-lg overflow-hidden group">
+            <img
+              class="group-hover:blur-[2px] transition-all duration-200 ease-out"
+              src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png"
+              alt="healin" />
+            <div
+              class="inset-0 absolute p-5 flex flex-col bg-black/40 opacity-0 scale-110 group-hover:scale-100 group-hover:opacity-100 transition-all duration-200 ease-out justify-center">
+              <p class="text-secondary text-4xl font-bold text-center">Heal'in UI</p>
+              <p class="text-lg text-center text-white p-8">
+                Utilized Figma to design a visually appealing and user-friendly interface for Exam Project.
+              </p>
             </div>
-          </div>
-        <img class="w-full rounded-lg hover:brightness-50" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/healin.png" alt="healin">
-      </div>
-
-    <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-      <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-        <div class="text-center max-w-md">
-          <p class="text-secondary text-4xl font-bold">Freelance as 2D Rigging Artist</p>
-          <p class="text-black text-lg">Work as 2D Animator with more than 10 successful gigs. Collaborated closely with clients 
-            to understand their requirements and delivering high-quality rigging on time and within budget.</p>
-            <button class="bg-secondary px-10 py-4 rounded-md">
-              Go to Fiverr
-            </button>
           </div>
         </div>
-        <img class="w-full rounded-lg" src="https://github.com/LynnArsa/my-web/blob/master/src/ameame.gif?raw=true" alt="amegif">
+      </div>
     </div>
 
-    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
+		<p class="text-center text-8xl font-bold p-16 text-secondary pt-[200px]">CONTACT</p>
 
-      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-          <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold"></p>
-            <p class="text-black text-lg"></p>
-              <button class="bg-secondary px-10 py-4 rounded-md">
-                Go to Page
-              </button>
-            </div>
-          </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/orange%20center.png" alt="orangecenter">
-      </div>
-
-      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-          <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Product Designer</p>
-            <p class="text-black text-lg">Led the Product Design Process, Utilized Enterprise Architect for UML Diagrams and Models, 
-              and Figma for user flows and interactive prototypes. Actively participated in Agile Scrum, 
-              collaborating with Analysts and Programmers for successful project completion.</p>
-              <button class="bg-secondary px-10 py-4 rounded-md">
-                Go to Page
-              </button>
-            </div>
-          </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/Diagrams.png" alt="w3school">
-      </div>
-
-    </div>
-
-    <div class="items-center justify-center flex flex-wrap m-4 gap-4">
-
-      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-          <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">W3School Web Duplication</p>
-            <p class="text-black text-lg">College Project to Duplicate Famous Website's Front-End. My first project where I first know and learn
-              about TailwindCSS.</p>
-              <button class="bg-secondary px-10 py-4 rounded-md">
-                Go to Page
-              </button>
-            </div>
-          </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/w3schoolclone.png" alt="w3school">
-      </div>
-
-      <div class="md:w-1/2 lg:px-4 lg:w-1/3 w-1/2 relative">
-        <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 transition-opacity duration-300">
-          <div class="text-center max-w-md">
-            <p class="text-secondary text-4xl font-bold">Advice Generator Web</p>
-            <p class="text-black text-lg"></p>
-              <button class="bg-secondary px-10 py-4 rounded-md">
-                Go to Page
-              </button>
-            </div>
-          </div>
-          <img class="w-full rounded-lg" src="https://raw.githubusercontent.com/LynnArsa/my-web/master/src/advicegenerator.png" alt="advicegenerator">
-      </div>
-
-    </div>
-  </div>
-
-<p class="text-center text-8xl font-bold p-16 text-secondary pt-[200px]">CONTACT</p>
-
-<div class="flex flex-row">
-  <div>GitHub</div>
-  <div>Behance</div>
-  <div>Discord</div>
-  <div>Instagram</div>
-</div>
-
-</body>
+		<div class="flex flex-row">
+			<div>GitHub</div>
+			<div>Behance</div>
+			<div>Discord</div>
+			<div>Instagram</div>
+		</div>
+	</body>
 </html>
